--- a/CDDStoreDemo/CDDStoreDemo/Base.lproj/LaunchScreen.storyboard
+++ b/CDDStoreDemo/CDDStoreDemo/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,16 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="TD6-Yf-im2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shopingCircle" translatesAutoresizingMaskIntoConstraints="NO" id="hc3-Uw-hoz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="TD6-Yf-im2" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Z7t-Vo-xuI"/>
-                            <constraint firstAttribute="trailing" secondItem="TD6-Yf-im2" secondAttribute="trailing" id="iyG-dK-xxx"/>
-                            <constraint firstItem="TD6-Yf-im2" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="p2X-BS-dwF"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TD6-Yf-im2" secondAttribute="bottom" id="xXe-Dv-wtu"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="hc3-Uw-hoz" secondAttribute="bottom" id="J6X-u5-odd"/>
+                            <constraint firstItem="hc3-Uw-hoz" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="LLg-Iv-dmN"/>
+                            <constraint firstItem="hc3-Uw-hoz" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="MS4-5Q-vrn"/>
+                            <constraint firstAttribute="trailing" secondItem="hc3-Uw-hoz" secondAttribute="trailing" id="Z0x-hp-4QR"/>
                         </constraints>
                     </view>
                 </viewController>
